--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "php-cuong/magento2-faqs-extensions",
+    "name": "josem-gg/magento2-faqs-extensions",
     "description":"Magento2 FAQ Extension Free",
     "keywords": [
         "magento 2",
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0",
-        "magento/module-backend": "100.0.*|100.1.*|100.2.*",
-        "magento/framework": "100.0.*|100.1.*|101.0.*"
+        "magento/module-backend": "100.0.*|100.1.*|100.2.*|100.3.*",
+        "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*"
     },
     "type": "magento2-module",
     "version": "2.1.7.1",
